HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuPtrAddrSpace/Source/Main.uv
//! Rejected structured-parallelism specimen for GPU pointer address-space mismatch.

public procedure gpuPtrAddrSpaceReference(pointer: GpuPtr<i32, Global>) -> GpuPtr<i32, Shared> {
    return move pointer
}
